plz check project1 to see my MonteCarlo solutions

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,28 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "64f1b2ff",
+   "id": "8675e428",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: yfinance in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (0.1.60)\n",
-      "Requirement already satisfied: lxml>=4.5.1 in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (from yfinance) (4.6.3)\n",
-      "Requirement already satisfied: pandas>=0.24 in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (from yfinance) (0.24.2)\n",
-      "Requirement already satisfied: requests>=2.20 in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (from yfinance) (2.25.1)\n",
-      "Requirement already satisfied: numpy>=1.15 in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (from yfinance) (1.20.1)\n",
-      "Requirement already satisfied: multitasking>=0.0.7 in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (from yfinance) (0.0.9)\n",
-      "Requirement already satisfied: pytz>=2011k in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (from pandas>=0.24->yfinance) (2021.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.5.0 in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (from pandas>=0.24->yfinance) (2.8.1)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (from python-dateutil>=2.5.0->pandas>=0.24->yfinance) (1.15.0)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (from requests>=2.20->yfinance) (2.10)\n",
-      "Requirement already satisfied: chardet<5,>=3.0.2 in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (from requests>=2.20->yfinance) (4.0.0)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (from requests>=2.20->yfinance) (1.26.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (from requests>=2.20->yfinance) (2021.5.30)\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -40,7 +21,6 @@
    ],
    "source": [
     "# Initial imports\n",
-    "!pip install yfinance\n",
     "import os\n",
     "import requests\n",
     "import pandas as pd\n",
@@ -55,8 +35,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "1844aa94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.20.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "84c0ce37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\users\\yauwa\\anaconda3\\envs\\pyvizenv\\lib\\site-packages (1.20.2)\n",
+      "Collecting numpy\n",
+      "  Using cached numpy-1.21.0-cp37-cp37m-win_amd64.whl (13.9 MB)\n",
+      "Installing collected packages: numpy\n",
+      "  Attempting uninstall: numpy\n",
+      "    Found existing installation: numpy 1.20.2\n",
+      "    Uninstalling numpy-1.20.2:\n",
+      "      Successfully uninstalled numpy-1.20.2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not install packages due to an OSError: [WinError 5] Access is denied: 'c:\\\\users\\\\yauwa\\\\anaconda3\\\\envs\\\\pyvizenv\\\\lib\\\\site-packages\\\\~umpy\\\\core\\\\_multiarray_tests.cp37-win_amd64.pyd'\n",
+      "Consider using the `--user` option or check the permissions.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install numpy --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5b157007",
+   "id": "dcac75dd",
    "metadata": {},
    "outputs": [],
    "source": []
