trying to make evrything a function

--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c4ae35de",
+   "id": "c9afe181",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6174d25d",
+   "id": "c5a4cedc",
    "metadata": {},
    "outputs": [
     {
@@ -1963,7 +1963,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b42a0b0a",
+   "id": "a0b7b389",
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e934d41b",
+   "id": "0cf08164",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1997,7 +1997,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6130475f",
+   "id": "b3fcf401",
    "metadata": {},
    "outputs": [
     {
@@ -2018,7 +2018,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "87085052",
+   "id": "4a1c2510",
    "metadata": {},
    "outputs": [
     {
@@ -2039,7 +2039,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e86d603a",
+   "id": "29f2aba7",
    "metadata": {},
    "outputs": [
     {
@@ -2115,7 +2115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95cc8f8f",
+   "id": "3bc04c70",
    "metadata": {},
    "source": [
     "# Calculate the Sharpe Ratio for all crypto"
@@ -2124,7 +2124,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "983d3c63",
+   "id": "0e5c32d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2143,7 +2143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2da57d4",
+   "id": "6f876bf2",
    "metadata": {},
    "source": [
     "# Sharpe Ratios\n",
@@ -2153,7 +2153,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "88ebafd9",
+   "id": "66fc86a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2173,7 +2173,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "760fbdbf",
+   "id": "0ec79e4a",
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2240,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a30a0e55",
+   "id": "a491670c",
    "metadata": {},
    "outputs": [
     {
@@ -2324,7 +2324,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "186ed3aa",
+   "id": "5041ab81",
    "metadata": {},
    "outputs": [
     {
@@ -2399,7 +2399,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "96cfd837",
+   "id": "c45677c9",
    "metadata": {},
    "outputs": [
     {
@@ -2464,7 +2464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "941c0ffa",
+   "id": "658b9321",
    "metadata": {},
    "source": [
     "# 10 stocks we have selected"
@@ -2473,7 +2473,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ee5ac9d6",
+   "id": "045f1d4f",
    "metadata": {},
    "outputs": [
     {
@@ -2550,7 +2550,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c0fa68e2",
+   "id": "f47ba170",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2570,7 +2570,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "d76c2acf",
+   "id": "e4ec840c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2590,7 +2590,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "90b3e10b",
+   "id": "e85f55bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2610,7 +2610,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9fcb2d89",
+   "id": "19d1498b",
    "metadata": {},
    "outputs": [
     {
@@ -2693,7 +2693,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4e8ae491",
+   "id": "24646dee",
    "metadata": {},
    "outputs": [
     {
@@ -2768,7 +2768,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "18a98601",
+   "id": "aae99daf",
    "metadata": {},
    "outputs": [
     {
@@ -2827,14 +2827,14 @@
     }
    ],
    "source": [
-    "# Plot all Crypto Sharpe Ratio as a bar chart\n",
-    "combined_sharpe_stocks.hvplot.bar(figsize=(20,20),label=\"All Crypto Sharpe Ratio\", grid=True)"
+    "# Plot all stocks Sharpe Ratio as a bar chart\n",
+    "combined_sharpe_stocks.hvplot.bar(figsize=(20,20),label=\"All Stocks Sharpe Ratio\", grid=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "51aa1471",
+   "id": "d7a15d7f",
    "metadata": {},
    "outputs": [
     {
@@ -2856,14 +2856,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2231f603",
+   "id": "f74ad619",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "65f3e96a",
+   "id": "a94411a5",
    "metadata": {},
    "source": [
     "# Monte Carlo"
@@ -2872,7 +2872,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "08223893",
+   "id": "7c3f0c03",
    "metadata": {},
    "outputs": [
     {
@@ -3018,7 +3018,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f7e81fe4",
+   "id": "a270a4b4",
    "metadata": {},
    "outputs": [
     {
@@ -3107,7 +3107,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "503f04fe",
+   "id": "46c49d01",
    "metadata": {},
    "outputs": [
     {
@@ -3140,7 +3140,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "3adf9525",
+   "id": "5650c78b",
    "metadata": {},
    "outputs": [
     {
@@ -3169,7 +3169,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "639bd237",
+   "id": "694666a0",
    "metadata": {},
    "outputs": [
     {
@@ -3196,7 +3196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "380ec615",
+   "id": "ece3e83c",
    "metadata": {},
    "outputs": [],
    "source": []
